# cet-project

./: .gitignore  404.html  index.html  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/workflows/: build.yml  ci-cd.yml  cicd.yml
docs/: mkdocs.yml
docs/docs/: index.md  intro.md  kmusic.md
intro/: index.html
kmusic/: index.html
lab/: eda.ipynb
search/: search_index.json
src/: knn_engine_impl.py  main.py
src/core/: config.py
templates/: index.jinja2  recommendation.jinja2  search-item.jinja2  search-results.jinja2
