[tool.poetry]
name = "src"
version = "0.1.0"
description = "Chicas en tech: Music reccomendation sys."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
pytest = "^7.4.3"
sqlmodel = "^0.0.11"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
fastapi-htmx = "^0.2.3"
uvicorn = "^0.24.0.post1"
thefuzz = "^0.20.0"
python-multipart = "^0.0.6"
mkdocs-material = "^9.4.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
